gen/libdwf_api.jl


function FDwfDigitalOutRepeatTriggerGet(hdwf, pfRepeatTrigger)
    ccall((:FDwfDigitalOutRepeatTriggerGet, libdwf), BOOL, (HDWF, Ptr{BOOL}), hdwf, pfRepeatTrigger)
end

function FDwfDigitalOutCount(hdwf, pcChannel)
    ccall((:FDwfDigitalOutCount, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pcChannel)
end

function FDwfDigitalOutEnableSet(hdwf, idxChannel, fEnable)
    ccall((:FDwfDigitalOutEnableSet, libdwf), BOOL, (HDWF, Cint, BOOL), hdwf, idxChannel, fEnable)
end

function FDwfDigitalOutEnableGet(hdwf, idxChannel, pfEnable)
    ccall((:FDwfDigitalOutEnableGet, libdwf), BOOL, (HDWF, Cint, Ptr{BOOL}), hdwf, idxChannel, pfEnable)
end

function FDwfDigitalOutOutputInfo(hdwf, idxChannel, pfsDwfDigitalOutOutput)
    ccall((:FDwfDigitalOutOutputInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}), hdwf, idxChannel, pfsDwfDigitalOutOutput)
end

function FDwfDigitalOutOutputSet(hdwf, idxChannel, v)
    ccall((:FDwfDigitalOutOutputSet, libdwf), BOOL, (HDWF, Cint, DwfDigitalOutOutput), hdwf, idxChannel, v)
end

function FDwfDigitalOutOutputGet(hdwf, idxChannel, pv)
    ccall((:FDwfDigitalOutOutputGet, libdwf), BOOL, (HDWF, Cint, Ptr{DwfDigitalOutOutput}), hdwf, idxChannel, pv)
end

function FDwfDigitalOutTypeInfo(hdwf, idxChannel, pfsDwfDigitalOutType)
    ccall((:FDwfDigitalOutTypeInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}), hdwf, idxChannel, pfsDwfDigitalOutType)
end

function FDwfDigitalOutTypeSet(hdwf, idxChannel, v)
    ccall((:FDwfDigitalOutTypeSet, libdwf), BOOL, (HDWF, Cint, DwfDigitalOutType), hdwf, idxChannel, v)
end

function FDwfDigitalOutTypeGet(hdwf, idxChannel, pv)
    ccall((:FDwfDigitalOutTypeGet, libdwf), BOOL, (HDWF, Cint, Ptr{DwfDigitalOutType}), hdwf, idxChannel, pv)
end

function FDwfDigitalOutIdleInfo(hdwf, idxChannel, pfsDwfDigitalOutIdle)
    ccall((:FDwfDigitalOutIdleInfo, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}), hdwf, idxChannel, pfsDwfDigitalOutIdle)
end

function FDwfDigitalOutIdleSet(hdwf, idxChannel, v)
    ccall((:FDwfDigitalOutIdleSet, libdwf), BOOL, (HDWF, Cint, DwfDigitalOutIdle), hdwf, idxChannel, v)
end

function FDwfDigitalOutIdleGet(hdwf, idxChannel, pv)
    ccall((:FDwfDigitalOutIdleGet, libdwf), BOOL, (HDWF, Cint, Ptr{DwfDigitalOutIdle}), hdwf, idxChannel, pv)
end

function FDwfDigitalOutDividerInfo(hdwf, idxChannel, vMin, vMax)
    ccall((:FDwfDigitalOutDividerInfo, libdwf), BOOL, (HDWF, Cint, Ptr{UInt32}, Ptr{UInt32}), hdwf, idxChannel, vMin, vMax)
end

function FDwfDigitalOutDividerInitSet(hdwf, idxChannel, v)
    ccall((:FDwfDigitalOutDividerInitSet, libdwf), BOOL, (HDWF, Cint, UInt32), hdwf, idxChannel, v)
end

function FDwfDigitalOutDividerInitGet(hdwf, idxChannel, pv)
    ccall((:FDwfDigitalOutDividerInitGet, libdwf), BOOL, (HDWF, Cint, Ptr{UInt32}), hdwf, idxChannel, pv)
end

function FDwfDigitalOutDividerSet(hdwf, idxChannel, v)
    ccall((:FDwfDigitalOutDividerSet, libdwf), BOOL, (HDWF, Cint, UInt32), hdwf, idxChannel, v)
end

function FDwfDigitalOutDividerGet(hdwf, idxChannel, pv)
    ccall((:FDwfDigitalOutDividerGet, libdwf), BOOL, (HDWF, Cint, Ptr{UInt32}), hdwf, idxChannel, pv)
end

function FDwfDigitalOutCounterInfo(hdwf, idxChannel, vMin, vMax)
    ccall((:FDwfDigitalOutCounterInfo, libdwf), BOOL, (HDWF, Cint, Ptr{UInt32}, Ptr{UInt32}), hdwf, idxChannel, vMin, vMax)
end

function FDwfDigitalOutCounterInitSet(hdwf, idxChannel, fHigh, v)
    ccall((:FDwfDigitalOutCounterInitSet, libdwf), BOOL, (HDWF, Cint, BOOL, UInt32), hdwf, idxChannel, fHigh, v)
end

function FDwfDigitalOutCounterInitGet(hdwf, idxChannel, pfHigh, pv)
    ccall((:FDwfDigitalOutCounterInitGet, libdwf), BOOL, (HDWF, Cint, Ptr{Cint}, Ptr{UInt32}), hdwf, idxChannel, pfHigh, pv)
end

function FDwfDigitalOutCounterSet(hdwf, idxChannel, vLow, vHigh)
    ccall((:FDwfDigitalOutCounterSet, libdwf), BOOL, (HDWF, Cint, UInt32, UInt32), hdwf, idxChannel, vLow, vHigh)
end

function FDwfDigitalOutCounterGet(hdwf, idxChannel, pvLow, pvHigh)
    ccall((:FDwfDigitalOutCounterGet, libdwf), BOOL, (HDWF, Cint, Ptr{UInt32}, Ptr{UInt32}), hdwf, idxChannel, pvLow, pvHigh)
end

function FDwfDigitalOutDataInfo(hdwf, idxChannel, pcountOfBitsMax)
    ccall((:FDwfDigitalOutDataInfo, libdwf), BOOL, (HDWF, Cint, Ptr{UInt32}), hdwf, idxChannel, pcountOfBitsMax)
end

function FDwfDigitalOutDataSet(hdwf, idxChannel, rgBits, countOfBits)
    ccall((:FDwfDigitalOutDataSet, libdwf), BOOL, (HDWF, Cint, Ptr{Cvoid}, UInt32), hdwf, idxChannel, rgBits, countOfBits)
end

function FDwfDigitalUartReset(hdwf)
    ccall((:FDwfDigitalUartReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDigitalUartRateSet(hdwf, hz)
    ccall((:FDwfDigitalUartRateSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, hz)
end

function FDwfDigitalUartBitsSet(hdwf, cBits)
    ccall((:FDwfDigitalUartBitsSet, libdwf), BOOL, (HDWF, Cint), hdwf, cBits)
end

function FDwfDigitalUartParitySet(hdwf, parity)
    ccall((:FDwfDigitalUartParitySet, libdwf), BOOL, (HDWF, Cint), hdwf, parity)
end

function FDwfDigitalUartStopSet(hdwf, cBit)
    ccall((:FDwfDigitalUartStopSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, cBit)
end

function FDwfDigitalUartTxSet(hdwf, idxChannel)
    ccall((:FDwfDigitalUartTxSet, libdwf), BOOL, (HDWF, Cint), hdwf, idxChannel)
end

function FDwfDigitalUartRxSet(hdwf, idxChannel)
    ccall((:FDwfDigitalUartRxSet, libdwf), BOOL, (HDWF, Cint), hdwf, idxChannel)
end

function FDwfDigitalUartTx(hdwf, szTx, cTx)
    ccall((:FDwfDigitalUartTx, libdwf), BOOL, (HDWF, Cstring, Cint), hdwf, szTx, cTx)
end

function FDwfDigitalUartRx(hdwf, szRx, cRx, pcRx, pParity)
    ccall((:FDwfDigitalUartRx, libdwf), BOOL, (HDWF, Cstring, Cint, Ptr{Cint}, Ptr{Cint}), hdwf, szRx, cRx, pcRx, pParity)
end

function FDwfDigitalSpiReset(hdwf)
    ccall((:FDwfDigitalSpiReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDigitalSpiFrequencySet(hdwf, hz)
    ccall((:FDwfDigitalSpiFrequencySet, libdwf), BOOL, (HDWF, Cdouble), hdwf, hz)
end

function FDwfDigitalSpiClockSet(hdwf, idxChannel)
    ccall((:FDwfDigitalSpiClockSet, libdwf), BOOL, (HDWF, Cint), hdwf, idxChannel)
end

function FDwfDigitalSpiDataSet(hdwf, idxDQ, idxChannel)
    ccall((:FDwfDigitalSpiDataSet, libdwf), BOOL, (HDWF, Cint, Cint), hdwf, idxDQ, idxChannel)
end

function FDwfDigitalSpiModeSet(hdwf, iMode)
    ccall((:FDwfDigitalSpiModeSet, libdwf), BOOL, (HDWF, Cint), hdwf, iMode)
end

function FDwfDigitalSpiOrderSet(hdwf, fMSBLSB)
    ccall((:FDwfDigitalSpiOrderSet, libdwf), BOOL, (HDWF, Cint), hdwf, fMSBLSB)
end

function FDwfDigitalSpiSelect(hdwf, idxChannel, level)
    ccall((:FDwfDigitalSpiSelect, libdwf), BOOL, (HDWF, Cint, Cint), hdwf, idxChannel, level)
end

function FDwfDigitalSpiWriteRead(hdwf, cDQ, cBitPerWord, rgTX, cTX, rgRX, cRX)
    ccall((:FDwfDigitalSpiWriteRead, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{Cuchar}, Cint, Ptr{Cuchar}, Cint), hdwf, cDQ, cBitPerWord, rgTX, cTX, rgRX, cRX)
end

function FDwfDigitalSpiWriteRead16(hdwf, cDQ, cBitPerWord, rgTX, cTX, rgRX, cRX)
    ccall((:FDwfDigitalSpiWriteRead16, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{UInt16}, Cint, Ptr{UInt16}, Cint), hdwf, cDQ, cBitPerWord, rgTX, cTX, rgRX, cRX)
end

function FDwfDigitalSpiWriteRead32(hdwf, cDQ, cBitPerWord, rgTX, cTX, rgRX, cRX)
    ccall((:FDwfDigitalSpiWriteRead32, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{UInt32}, Cint, Ptr{UInt32}, Cint), hdwf, cDQ, cBitPerWord, rgTX, cTX, rgRX, cRX)
end

function FDwfDigitalSpiRead(hdwf, cDQ, cBitPerWord, rgRX, cRX)
    ccall((:FDwfDigitalSpiRead, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{Cuchar}, Cint), hdwf, cDQ, cBitPerWord, rgRX, cRX)
end

function FDwfDigitalSpiReadOne(hdwf, cDQ, cBitPerWord, pRX)
    ccall((:FDwfDigitalSpiReadOne, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{UInt32}), hdwf, cDQ, cBitPerWord, pRX)
end

function FDwfDigitalSpiRead16(hdwf, cDQ, cBitPerWord, rgRX, cRX)
    ccall((:FDwfDigitalSpiRead16, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{UInt16}, Cint), hdwf, cDQ, cBitPerWord, rgRX, cRX)
end

function FDwfDigitalSpiRead32(hdwf, cDQ, cBitPerWord, rgRX, cRX)
    ccall((:FDwfDigitalSpiRead32, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{UInt32}, Cint), hdwf, cDQ, cBitPerWord, rgRX, cRX)
end

function FDwfDigitalSpiWrite(hdwf, cDQ, cBitPerWord, rgTX, cTX)
    ccall((:FDwfDigitalSpiWrite, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{Cuchar}, Cint), hdwf, cDQ, cBitPerWord, rgTX, cTX)
end

function FDwfDigitalSpiWriteOne(hdwf, cDQ, cBits, vTX)
    ccall((:FDwfDigitalSpiWriteOne, libdwf), BOOL, (HDWF, Cint, Cint, UInt32), hdwf, cDQ, cBits, vTX)
end

function FDwfDigitalSpiWrite16(hdwf, cDQ, cBitPerWord, rgTX, cTX)
    ccall((:FDwfDigitalSpiWrite16, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{UInt16}, Cint), hdwf, cDQ, cBitPerWord, rgTX, cTX)
end

function FDwfDigitalSpiWrite32(hdwf, cDQ, cBitPerWord, rgTX, cTX)
    ccall((:FDwfDigitalSpiWrite32, libdwf), BOOL, (HDWF, Cint, Cint, Ptr{UInt32}, Cint), hdwf, cDQ, cBitPerWord, rgTX, cTX)
end

function FDwfDigitalI2cReset(hdwf)
    ccall((:FDwfDigitalI2cReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDigitalI2cClear(hdwf, pfFree)
    ccall((:FDwfDigitalI2cClear, libdwf), BOOL, (HDWF, Ptr{Cint}), hdwf, pfFree)
end

function FDwfDigitalI2cStretchSet(hdwf, fEnable)
    ccall((:FDwfDigitalI2cStretchSet, libdwf), BOOL, (HDWF, Cint), hdwf, fEnable)
end

function FDwfDigitalI2cRateSet(hdwf, hz)
    ccall((:FDwfDigitalI2cRateSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, hz)
end

function FDwfDigitalI2cReadNakSet(hdwf, fNakLastReadByte)
    ccall((:FDwfDigitalI2cReadNakSet, libdwf), BOOL, (HDWF, Cint), hdwf, fNakLastReadByte)
end

function FDwfDigitalI2cSclSet(hdwf, idxChannel)
    ccall((:FDwfDigitalI2cSclSet, libdwf), BOOL, (HDWF, Cint), hdwf, idxChannel)
end

function FDwfDigitalI2cSdaSet(hdwf, idxChannel)
    ccall((:FDwfDigitalI2cSdaSet, libdwf), BOOL, (HDWF, Cint), hdwf, idxChannel)
end

function FDwfDigitalI2cWriteRead(hdwf, adr8bits, rgbTx, cTx, rgRx, cRx, pNak)
    ccall((:FDwfDigitalI2cWriteRead, libdwf), BOOL, (HDWF, Cuchar, Ptr{Cuchar}, Cint, Ptr{Cuchar}, Cint, Ptr{Cint}), hdwf, adr8bits, rgbTx, cTx, rgRx, cRx, pNak)
end

function FDwfDigitalI2cRead(hdwf, adr8bits, rgbRx, cRx, pNak)
    ccall((:FDwfDigitalI2cRead, libdwf), BOOL, (HDWF, Cuchar, Ptr{Cuchar}, Cint, Ptr{Cint}), hdwf, adr8bits, rgbRx, cRx, pNak)
end

function FDwfDigitalI2cWrite(hdwf, adr8bits, rgbTx, cTx, pNak)
    ccall((:FDwfDigitalI2cWrite, libdwf), BOOL, (HDWF, Cuchar, Ptr{Cuchar}, Cint, Ptr{Cint}), hdwf, adr8bits, rgbTx, cTx, pNak)
end

function FDwfDigitalI2cWriteOne(hdwf, adr8bits, bTx, pNak)
    ccall((:FDwfDigitalI2cWriteOne, libdwf), BOOL, (HDWF, Cuchar, Cuchar, Ptr{Cint}), hdwf, adr8bits, bTx, pNak)
end

function FDwfDigitalCanReset(hdwf)
    ccall((:FDwfDigitalCanReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfDigitalCanRateSet(hdwf, hz)
    ccall((:FDwfDigitalCanRateSet, libdwf), BOOL, (HDWF, Cdouble), hdwf, hz)
end

function FDwfDigitalCanPolaritySet(hdwf, fHigh)
    ccall((:FDwfDigitalCanPolaritySet, libdwf), BOOL, (HDWF, Cint), hdwf, fHigh)
end

function FDwfDigitalCanTxSet(hdwf, idxChannel)
    ccall((:FDwfDigitalCanTxSet, libdwf), BOOL, (HDWF, Cint), hdwf, idxChannel)
end

function FDwfDigitalCanRxSet(hdwf, idxChannel)
    ccall((:FDwfDigitalCanRxSet, libdwf), BOOL, (HDWF, Cint), hdwf, idxChannel)
end

function FDwfDigitalCanTx(hdwf, vID, fExtended, fRemote, cDLC, rgTX)
    ccall((:FDwfDigitalCanTx, libdwf), BOOL, (HDWF, Cint, Cint, Cint, Cint, Ptr{Cuchar}), hdwf, vID, fExtended, fRemote, cDLC, rgTX)
end

function FDwfDigitalCanRx(hdwf, pvID, pfExtended, pfRemote, pcDLC, rgRX, cRX, pvStatus)
    ccall((:FDwfDigitalCanRx, libdwf), BOOL, (HDWF, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cint}, Ptr{Cuchar}, Cint, Ptr{Cint}), hdwf, pvID, pfExtended, pfRemote, pcDLC, rgRX, cRX, pvStatus)
end

function FDwfAnalogImpedanceReset(hdwf)
    ccall((:FDwfAnalogImpedanceReset, libdwf), BOOL, (HDWF,), hdwf)
end

function FDwfAnalogImpedanceModeSet(hdwf, mode)
    ccall((:FDwfAnalogImpedanceModeSet, libdwf), BOOL, (HDWF, Cint), hdwf, mode)
end
